# my-projects

./: .dockerignore  .gitignore  .koyeb.yaml  Dockerfile  README.md  entrypoint.sh  project ideas.docx  render.yaml
Nexus-AI/: TODO.md  nexus-ai-company.jsx
careeros/: .env.example  .gitignore  DESIGN.md  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
cpp files/: 01_calculator.cpp  01_calculator_beginner.cpp  02_circle_area_circumference.cpp  03_fahrenheit_to_celsius.cpp  04_third_angle_triangle.cpp  05_kmph_to_mph.cpp  06_total_and_average.cpp  07_current_date_time.cpp  08_perfect_numbers_1_to_500.cpp  09_series_sum.cpp  10_lcm_using_hcf.cpp  11_pascals_triangle_right_angle.cpp  12_update_array_by_neighbors.cpp  13_two_repeating_elements.cpp  14_common_elements_three_sorted_arrays.cpp  15_reverse_string.cpp  15_reverse_string_beginner.cpp  15_reverse_string_student.cpp  calculator.cpp  guess.cpp  (+3 more)
marketpulse/: .env.example  .gitignore  .koyeb.yaml  Dockerfile  PRD.md  README.md  TODO.md  ai.py  alerts.py  battle.py  bot.py  brain.py  catalyst.py  db.py  debug_insider.py  earnings.py  entrypoint.sh  hedge.py  insider.py  intelligence.py  main.py  market.py  news.py  notifier.py  payments.py  premium.py  pulse.py  pyproject.toml  radar.py  reddit.py  render.yaml  requirements.txt  run_scheduled.py  screener.py  sentiment.py  setups.py  signals.py  smartmoney.py  story.py  test_cycle.py  (+6 more)
marketpulse/.github/workflows/: scheduled-briefs.yml
marketpulse/api/: index.py
marketpulse/web/: __init__.py  app.py
(+268 files in other folders)
