[project]
name = "marketpulse"
version = "1.0.0"
description = "AI market-intelligence Telegram bot — sentiment, insider trades, technical signals"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "yfinance>=0.2.0",
  "pandas>=2.0.0",
  "requests>=2.32.0",
  "feedparser>=6.0.0",
  "python-dotenv>=1.0.0",
  "google-genai>=1.0.0",
  "python-telegram-bot[job-queue]>=20.0",
  "pytz>=2024.1",
]

[project.optional-dependencies]
web = ["fastapi>=0.111", "uvicorn[standard]>=0.30"]
payments = ["stripe>=9.7"]
all = ["marketpulse[web, payments]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
